--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -1,86 +1,76 @@
-"ERROR_INVALID_INPUT","Zertifikatsdatei und Passwort sind erforderlich"
-"ERROR_INVALID_UNKNOWN","Zertifikat kann nicht validiert werden. Bitte versuchen Sie es erneut"
-"ERROR_INVALID_CERTIFICATE_FORMAT","Ungültiges Zertifikatsformat"
-"ERROR_INVALID_PASSPHRASE","Ungültiges Zertifikatspasswort"
-"ERROR_INVALID_ISSUER_COUNTRY","Ungültiges Ausstellerland"
-"ERROR_INVALID_ISSUER_ORGANIZATION","Ungültige Ausstellerorganisation"
-"ERROR_INVALID_EXPIRY_DATE","Ungültiges Ablaufdatum"
+﻿"ERROR_INVALID_INPUT","Zertifikatsdatei und Passwort erforderlich"
+"ERROR_INVALID_UNKNOWN","Zertifikat kann nicht validiert werden. Bitte erneut versuchen"
+"ERROR_INVALID_CERTIFICATE_FORMAT","Zertifikatsformat ungültig"
+"ERROR_INVALID_PASSPHRASE","Passwort ungültig"
+"ERROR_INVALID_ISSUER_COUNTRY","Land des Herausgebers ungültig"
+"ERROR_INVALID_ISSUER_ORGANIZATION","Organisation des Herausgebers ungültig"
+"ERROR_INVALID_EXPIRY_DATE","Verfalldatum ungültig"
 "ERROR_CERTIFICATE_EXPIRED","Zertifikat abgelaufen"
-"ERROR_CERTIFICATE_NOT_YET_VALID","Zertifikat ist noch nicht gültig"
-
-View,Anzeigen
-TWINT,TWINT
+"ERROR_CERTIFICATE_NOT_YET_VALID","Zertifikat noch nicht gültig"
+"View","Anzeigen"
+"TWINT","TWINT"
 "Switch to TWINT app now","Wechseln Sie jetzt zur TWINT-App"
-"Choose your TWINT app:","Choose your TWINT app:"
-"Other banks","Other banks"
-or,or
-"Enter this code in your TWINT app:","Enter this code in your TWINT app:"
-"Certificate validation successful","Certificate validation successful"
-"Something went wrong while processing the data.","Something went wrong while processing the data."
-"Invalid credentials. Please check again: Store UUID, certificate and environment (mode)","Invalid credentials. Please check again: Store UUID, certificate and environment (mode)"
-"Request Log","Request Log"
-"Choose file","Choose file"
-"Only .p12 files are allowed","Only .p12 files are allowed"
-"Password is required for all TWINT certificates.","Password is required for all TWINT certificates."
-"Certificate encrypted and stored,","Certificate encrypted and stored,"
-"Upload new certificate","Upload new certificate"
-Production,Production
-Test,Test
-"Product detail page","Product detail page"
-"Product listing page","Product listing page"
-"Cart page","Cart page"
-"Cart flyout","Cart flyout"
-"Captured amount of CHF %1, Transaction ID %2","Captured amount of CHF %1, Transaction ID %2"
-"Refund amount has to greater than 0","Refund amount has to greater than 0"
-"Refund amount is exceed the transaction amount","Refund amount is exceed the transaction amount"
-"Custom Information for new tab","Custom Information for new tab"
-"Refund history","Refund history"
-"Transaction logs","Transaction logs"
-"API method","API method"
-Request,Request
-Response,Response
+"Choose your TWINT app","TWINT App auswählen"
+"Other banks","Andere Banken"
+"or","oder"
+"Enter this code in your TWINT app:","Diesen Code in der TWINT App eingeben:"
+"Certificate validation successful","Zertifikat erfolgreich validiert"
+"Something went wrong while processing the data.","Beim Verarbeiten der Daten ist ein Fehler aufgetreten."
+"Invalid credentials. Please check again: Store UUID, certificate and environment (mode)","" certificate and environment (mode)","Ungültige Zugangsdaten. Bitte überprüfen: UUID Ihres Stores, Zertifikat und Umfeld (Modus)"
+"Request Log","Anfragelogbuch"
+"Choose file","Datei auswählen"
+"Only .p12 files are allowed","Nur .p12-Dateien sind erlaubt"
+"Certificate password is required","Zertifikatspasswort erforderlich"
+"Certificate encrypted and stored","Zertifikat verschlüsselt und gespeichert"
+"Upload new certificate","Neues Zertifikat hochladen"
+"Production","Produktion"
+"Test","Test"
+"Product detail page","Produktdetailseite"
+"Product listing page","Zur Produktliste"
+"Cart page","Warenkorb"
+"Cart flyout","Warenkorb-Flyout"
+"Captured amount of CHF %1, Transaction ID %2",Erfasster Betrag von CHF %1, Transaktions-ID %2"
+"Amount to refund should be greater than 0","Der zu erstattende Betrag sollte grösser als 0 sein"
+"Total amount should not exceed the maximum refundable amount","Der Gesamtbetrag sollte den erstattungsfähigen Höchstbetrag nicht überschreiten"
+"Transaction logs","Transaktionsverlauf (Logs)"
+"API method","API-Methode"
+"Request","Anfrage"
+"Response","Antwort"
 "Express Checkout","Express Checkout"
-"Copy code","Copy code"
-"Open your bank's TWINT app on your smartphone.","Open your bank's TWINT app on your smartphone."
-"Scan this QR Code with your TWINT app to complete the checkout.","Scan this QR Code with your TWINT app to complete the checkout."
-"Select a shipping address and complete the purchase in the app.","Select a shipping address and complete the purchase in the app."
+"Copy code","Code kopieren"
+"Scan this QR Code with your TWINT app to complete the checkout.","Diesen QR-Code mit der TWINT App scannen"," um den Bestellvorgang abzuschliessen.",
+"Select a shipping address and complete the purchase in the app.","Lieferadresse auswählen und Kauf in der App abschliessen."
 "TWINT Checkout","TWINT Checkout"
-"Place Order","Place Order"
-"Invalid Store UUID. Store UUID needs to be a UUIDv4","Invalid Store UUID. Store UUID needs to be a UUIDv4"
-"Validating credentials","Validating credentials"
-Saving...,Saving...
-Copied!,Copied!
-"Cancel checkout","Cancel checkout"
-"Payment method offered by TWINT","Payment method offered by TWINT"
-Configuration,Configuration
-Credentials,Credentials
-"Regular Checkout","Regular Checkout"
-"Store UUID","Store UUID"
-Environment,Environment
-Certificate,Certificate
-"TWINT Regular Checkout","TWINT Regular Checkout"
-"Sort Order","Sort Order"
+"Invalid Store UUID. Store UUID needs to be a UUIDv4","Ungültige Zugangsdaten. Bitte überprüfen: UUID Ihres Stores"," Zertifikat und Umfeld (Modus)",
+"Validating credentials","Anmeldeinformationen werden überprüft"
+"Saving...","Speichern..."
+"Copied!","Kopiert!"
+"Cancel checkout","Checkout abbrechen"
+"Payment method offered by TWINT","Zahlungsmethode angeboten von TWINT"
+"Configuration","Konfiguration"
+"Credentials","Credentials"
+"Store UUID","UUID Ihres Stores"
+"Environment","Umgebung"
+"Certificate","Zertifikat"
 "TWINT Express Checkout","TWINT Express Checkout"
-"Display screens","Display screens"
-"Where users see the TWINT Express Checkout button","Where users see the TWINT Express Checkout button"
-"History ID","History ID"
-Order,Order
-Store,Store
-Amount,Amount
-Status,Status
-"Pairing Status","Pairing Status"
-"Transaction Status","Transaction Status"
-"Transaction Date","Transaction Date"
-Actions,Actions
-"Reversal ID","Reversal ID"
-"Pairing ID","Pairing ID"
-"Reversal ID","Reversal ID"
-"Refunded by","Refunded by"
-"Refund Date","Refund Date"
-ID,ID
-Token,Token
-"TWINT Configuration","TWINT Configuration"
-"TWINT statuses","TWINT statuses"
-"Shipping Method","Shipping Method"
-"Customer Data","Customer Data"
-"History ID","History ID"
+"Display screens","Screens anzeigen"
+"Where users see the TWINT Express Checkout button","Hier sehen die Nutzerinnen und Nutzer die Schaltfläche TWINT Express Checkout"
+"Order","Bestellung"
+"Store","Geschäft"
+"Amount","Betrag"
+"Status","Status"
+"Pairing Status","Pairing-Status"
+"Transaction Status","Transaktionsstatus"
+"Transaction Date","Transaktionsdatum"
+"Actions","Aktionen"
+"Reversal ID","Storno-ID"
+"Pairing ID","Pairing-ID"
+"Refunded by","Erstattet von"
+"Refund Date","Rückerstattungsdatum"
+"ID","ID"
+"Token","Token"
+"TWINT Configuration","TWINT-Konfiguration"
+"TWINT statuses","TWINT-Status"
+"Shipping Method","Versandmethode"
+"Customer Data","Kundendaten"
+"History ID","Historien-ID"
