--- a/i18n/fr_CH.csv
+++ b/i18n/fr_CH.csv
@@ -75,3 +75,4 @@
 "Shipping Method","Méthode d'expédition"
 "Customer Data","Données client"
 "History ID","ID d'historique"
+"Payment did not succeed, please try another payment method.","Le paiement n'a pas abouti, veuillez essayer un autre mode de paiement."
