--- a/i18n/it_CH.csv
+++ b/i18n/it_CH.csv
@@ -75,3 +75,4 @@
 "Shipping Method","Metodo di spedizione"
 "Customer Data","Dati del cliente"
 "History ID","ID storico"
+"Payment did not succeed, please try another payment method.","Il pagamento non è riuscito, si prega di provare un altro metodo di pagamento."
