--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -75,3 +75,4 @@
 "Shipping Method","Versandmethode"
 "Customer Data","Kundendaten"
 "History ID","Historien-ID"
+"Payment did not succeed, please try another payment method.","Die Zahlung war nicht erfolgreich, bitte versuchen Sie eine andere Zahlungsmethode."
